# filebruster

./: .gitmodules  Cargo.toml  rocket.toml
src/: main.rs  resource.rs  resources.rs  static.rs
src/json/: fileinfo.rs  listing.rs  mod.rs
