[package]
name = "filebruster"
version = "0.1.0"
authors = ["irevoire <irevoire@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.7"
rocket_contrib = "0.4"
