[package]
name = "filebruster"
version = "0.1.0"
authors = ["irevoire <irevoire@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
rust-embed = "5.9.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.6.1"
tokio = { version = "1.21.2", features = ["full"] }
axum = { version = "0.5.17", features = ["macros", "headers", "json"] }
mime = "0.3.16"
tokio-util = { version = "0.7.4", features = ["full"] }
